--- a/Ergasia2/style.css
+++ b/Ergasia2/style.css
@@ -1,5 +1,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+
+* {
+    scrollbar-gutter: stable both-edges;
+}
+
+
+a:link{
+    max-width: 100%;
+    border-radius: 16px;
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
+    z-index: 1;
+    text-decoration: none;
+    text-rendering: optimizeLegibility;
+    font-size: 1rem;
+    line-height: 1rem;
+    color: #000;
+    overflow: hidden;
+}
+
+a:visited{
+    color: #000;
+}
+
+/*set bg color light blue when hovering links*/
+a:hover {
+    padding: 4px;
+    background-color: #d2fdff;
+    text-decoration: underline;
+}
+
+a:active{
+    background-color: #109ea3;
+    color: #fff;
+}
+
 /*set body bg color to grey*/
 body {
     background-color: #e1e1e1;
@@ -14,24 +50,36 @@ main {
     background-color: #f1f1f1;
 }
 
-/*set header bg color to grey 
-    img is not properly centered for some reason*/
+.header-content {
+    padding: 10px;
+}
+
+/*add bg image to header*/
 .site-header {
+    background-image: url("../assets/bg_header.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: #e1e1e1;
     margin:0px;
-    padding:0px;
     text-align: center;
 }
 
 /*set letter spacing and text shadow to site header h1*/
-.site-header > h1 {
+.header-content > h1 {
+    font-size: 2em;
     letter-spacing: 4px;
-    text-shadow: 2px 2px 5px #82fbff;
+    text-shadow: 2px 2px 5px #fff;
 }
 
-/*remove bullets from top menu*/
+/*remove bullets and left padding from top menu*/
 .top-menu > ul {
+    padding-inline-start: 0px;
     list-style: none;
+}
+
+.top-menu li {
+    padding-top: 0.2rem;
+    padding-bottom: 0.2rem;
 }
 
 /*center main content header and set relative font size*/
@@ -45,29 +93,23 @@ main > p {
     font-size: 1em;
 }
 
-/*set bg color light blue when hovering links*/
-a:hover {
-    background-color: #82fbff;
-}
-
-/*set various links to have normalized properties
-    ---to be fixed---*/
-.top-menu a , .product-category a , .product a, .navigation a {   
-    max-width: 100%;
-    border-radius: 16px;
-    margin-top: 8px;
-    z-index: 1;
-    text-decoration: none;
-    text-rendering: optimizeLegibility;
-    font-size: 1rem;
-    line-height: 1rem;
-    color: #000;
-    overflow: hidden;
+/*add left-right padding in index and about-us main sections*/
+.welcome-text , .about-us.text {
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 /*no numbers in product categories navigation list*/
 .navigation ol {
     list-style: none;
+}
+
+.navigation li::after {
+    content: " >";
+}
+
+.navigation li:last-child:after {
+    content: "";
 }
 
 /*product categories nav list inline
@@ -76,29 +118,45 @@ a:hover {
     display: inline;
 }
 
+
+
+
+
+
+
 /*added flex properties for the product categories*/
 #category-list {
     display: flex;
     flex-flow: row wrap;
     margin: 0.3rem;
-    list-style: none
+    list-style: none;
 }
 
 /*removed list style from subcategory lists*/
 .product-category ul {
     padding-left: 0px;
-    list-style: none
-}
-
-/*padding in subcategory list items*/
-.product-category li {
-    padding: 4px;
+    list-style: none;
 }
 
 /*greyed out subcategories without link and left align*/
 .product-category ul > li {
+    padding: 2px;
     text-align: left;
     color: #9c9c9c;
+}
+
+/*create category boxes with padding*/
+.product-category {
+    background-color: #fff;
+    margin: 20px;
+    padding: 4px;
+}
+
+/*set same size to all images centrally*/
+.product-category img {
+    height: 200px;
+    width: 200px;
+    padding: 10px;
 }
 
 /*center main content header, set relative font size/padding*/
@@ -108,11 +166,60 @@ a:hover {
     padding-top: 10px;
 }
 
-/*create category boxes*/
-.product-category {
+
+
+
+
+/*center main content header*/
+.products h1{
+    text-align: center;
+    font-size: 2em;
+}
+
+/*added flex properties for the products*/
+.product-list {
+    display: flex;
+    flex-flow: row wrap;
+    margin: 0.3rem;
+    list-style: none;
+}
+
+/*removed list style from basic product features list*/
+.product-item ul {
+    padding-left: 0px;
+    list-style: none;
+}
+
+/*left align basic product features list*/
+.product-item ul > li {
+    text-align: left;
+}
+
+/*create product boxes with padding*/
+.product-item {
     background-color: #fff;
     margin: 20px;
+    padding: 8px;
 }
+
+/*set product header font size to 1rem*/
+.product-item h2{
+    font-size: 1em;
+}
+
+/*set same size and properties to all images centrally*/
+.product-item img {
+    height: 150px;
+    width: 230px;
+    float: left;
+    padding: 10px;
+}
+
+
+
+
+
+
 
 /*basic footer properties*/
 .site-footer {
@@ -137,11 +244,14 @@ a:hover {
     justify-content: center;
     list-style: none;
     margin: 0;
+    padding-inline-start: 0px;
 }
 
 /*margin between footer social media links*/
 .site-footer-list-item {
     margin: 4px;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 
