--- a/Ask2/style.css
+++ b/Ask2/style.css
@@ -284,6 +284,11 @@ main > p {
     padding: 0 12px;
 }
 
+.product-info img {
+    width: 230px;
+}
+
+
 
 
 
@@ -414,8 +419,15 @@ fieldset {
     padding-right: 16px;
 }
 
+/*footer image link size*/
+.site-footer-list-item img {
+    width: 100px;
+    height: 100px;
+}
+
 /*change footer copyright text style*/
 .copyright {
+    padding: 8px;
     color: rgb(110, 110, 110);
     font-size: 0.8rem;
 }
