ask5 completed and small changes to ask 1,2,3,4

--- a/Ask2/style.css
+++ b/Ask2/style.css
@@ -2,10 +2,12 @@
 
 
 
-/*make scrollbar cover content instead of pushing it*/
+/*make scrollbar cover content instead of pushing it
 * {
     scrollbar-gutter: stable both-edges;
 }
+*/
+
 
 
 /*set general properties for links*/
